<resources>
    <string name="app_name">Cryptocurrency Market</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Select Cryptocurrency:</string>
    <string name="zero">$0.00</string>
    <string name="none">0</string>
    <string name="currencyImgDesc">Currency Image</string>
    <string name="poweredBy">Powered By:</string>
    <string name="search_go">https://www.cryptocompare.com/</string>
    <string name="graphTitle">Price Graphs</string>
    <string name="graphBtn">Graphs and Charts</string>

    //Variables that change
    <string name="marketCap">Market Cap:</string>
    <string name="volume">Volume:</string>
    <string name="lastTrade">Last Trade ID:</string>
    <string name="supply">Supply:</string>
    <string name="maxSupply">Max Supply:</string>
    <string name="value">Current Value:</string>
    <string name="market">On Exchange:</string>


    <string-array name="cryptoSelect">
        <item>BTC</item>
        <item>ETH</item>
        <item>RPL</item>
        <item>LTC</item>
        <item>DASH</item>
    </string-array>

    <string-array name="cryptoSelectName">
        <item>Bitcoin</item>
        <item>Ethereum</item>
        <item>Ripple</item>
        <item>Litecoin</item>
        <item>Dash</item>
    </string-array>
    <string name="title_activity_main_graphs">MainGraphs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
