<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG">

    <Spinner
        android:id="@+id/cryptoSelect"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mainTitle"
        android:layout_margin="20dp"
        android:background="@android:color/background_light"
        android:entries="@array/cryptoSelectName" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/mainTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/mainTxtClr" />

    <TableLayout
        android:id="@+id/outputTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/cryptoSelect"
        android:layout_alignLeft="@+id/cryptoSelect"
        android:layout_alignRight="@+id/cryptoSelect"
        android:layout_alignStart="@+id/cryptoSelect"
        android:layout_below="@+id/cryptoSelect"
        android:background="@color/mainBG">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/currentVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr" />

            <TextView
                android:id="@+id/valUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/zero"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/marketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketCap"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr" />

            <TextView
                android:id="@+id/valMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/zero"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr" />

            <TextView
                android:id="@+id/valVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/none"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/maxSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxSupply"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr" />

            <TextView
                android:id="@+id/valMaxSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/none"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr"
                android:textColorHint="@android:color/background_light" />

            <TextView
                android:id="@+id/exchangeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/none"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lastTradeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastTrade"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/mainTxtClr"
                android:textColorHint="@android:color/background_light" />

            <TextView
                android:id="@+id/lastTradeIDValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/none"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/currencyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mainTitle"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignTop="@+id/outputTable"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/currencyImgDesc"
        android:src="@mipmap/btc" />

    <TextView
        android:id="@+id/poweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/poweredBy"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="@android:string/search_go"
        android:src="@mipmap/cryptocompare" />


</RelativeLayout>